# goby

./: .gitattributes  .gitignore  .gitmodules  CHANGES.txt  COPYING  README-Goby.txt  README.md  build.xml  compare.sh  goby  goby.ipr  java_make.sh  ll2  module_goby.xml  nightly.xml  null-true-methylation.tsv  overview.html  pom.xml  release.xml
buildsupport/: build.xml
config/: goby-sample.properties  log4j-sample.properties
cpp/: .cproject  .project  Alignments.pb.h  Makefile.am  README.txt  Reads.pb.cc  Reads.pb.h  autogen.sh  configure.ac  goby.pc.in  run-gsnap-exercises-make-htmls.sh
cpp/nbproject/: Package-Default.bash  Package-GsnapParseTest1.bash  configurations.xml  project.xml
cpp/src/: Alignments.pb.cc  Alignments.pb.h  C_Sample_CompactReads.c  GobyAlignmentStats.cc  GobyAlignmentToText.cc  GobyFastaToCompact.cc  GobyReadsStats.cc  GsnapParseTest1.cc  Makefile.am  Reads.pb.h  TestReadCompactReads.c
cpp/src/goby/: Alignments.cc  Alignments.h  Alignments.pb.cc  Alignments.pb.h  CReadsHelper.h  C_Alignments.cc  C_Alignments.h  C_CompactHelpers.h  C_Gsnap.cc  C_Gsnap.h  C_Gsnap_structs.h  C_Reads.cc  C_Reads.h  CompactFormatsHelpers.h  GsnapAlignments.cc  GsnapAlignments.h  GsnapReads.cc  GsnapReads.h  GsnapSequence.h  GsnapStructs.h  ICBFileInputStream.cc  ICBFileInputStream.h  MessageChunks.cc  MessageChunks.h  Reads.cc  Reads.h  Reads.pb.cc  Reads.pb.h  SamFlags.h  TooManyHits.cc  TooManyHits.h  common.cc  common.h  hash.h  propertyutil.cc
cpp/test-data/: 00-seq-var-reads-gsnap.gsnap  01-seq-var-reads-gsnap.gsnap  02-seq-var-reads-gsnap.gsnap  04-seq-var-reads-gsnap.gsnap  07-seq-var-reads-gsnap.gsnap  12-seq-var-reads-gsnap.gsnap  13-seq-var-reads-gsnap.gsnap  14-seq-var-reads-gsnap.gsnap  24-seq-var-reads-gsnap.gsnap  25-seq-var-reads-gsnap.gsnap  26-seq-var-reads-gsnap.gsnap  all-seq-var-reads-gsnap.gsnap  gsnap-output-nonpair-noqual-test-1.gnap  gsnap-output-pair-test-1.gsnap  gsnap-output-single-qual-del.gsnap  gsnap-output-single-reverse-ins.gsnap  gsnap-paired-multi.gsnap  gsnap-paired-spliced-multi.gsnap  shortexon-forward.gsnap  shortexon-reverse.gsnap  splice-antisense.gsnap  splice-sense.gsnap  splice-two-hits-reverse.gsnap  spliced-pair.gsnap  synth.chromosome.list.txt  unpaired-keep-left.gsnap  unpaired-keep-right.gsnap  zebrafish.chromosome.list.txt
cpp/vsprojects/: GobyAlignmentStats.vcxproj  GobyAlignmentStats.vcxproj.filters  GobyAlignmentToText.vcxproj  GobyAlignmentToText.vcxproj.filters  GobyFastaToCompact.vcxproj  GobyFastaToCompact.vcxproj.filters  GobyReadsStats.vcxproj  GobyReadsStats.vcxproj.filters  goby.sln  goby.vcxproj  goby.vcxproj.filters
data/: biomart_human_transcript_ensembl52_NCBI36.txt
lib/: pj-license.txt  samtools-license.txt
logs/: TESTS-TestSuites.xml
maven/: pom-goby-api-upload.xml  pom-goby-build.xml  pom-goby-io-api-upload.xml  pom-goby-io-upload.xml  push.sh
protobuf/: Alignments.proto  README.txt  Reads.proto  gensrc.bat  gensrc.sh
python/: GobyAlignmentStats.py  GobyAlignmentToText.py  GobyCompactToFasta.py  GobyReadsStats.py  README.txt  setup.py
test-results/: TEST-edu.cornell.med.icb.goby.R.TestFisherExact.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.ExportSplicingEventsTest.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.RandomAccessAnnotationsTest.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestAccumulate.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestAnnotationCount.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestCommonSubstrings.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestComputeStartCount.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestCoverageAnalysis.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestCumulativeArrayKeeper.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestEquivalentIndelRegionCalculator.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestFenwickTree.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestHiCMerge.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestMedianCombinator.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestQFast.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestSlidingCountArray.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.TestSortedAnnotations.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.dmr.TestDeNovoDMRfinder.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.dmr.TestDensityEstimator.xml  TEST-edu.cornell.med.icb.goby.algorithmic.algorithm.dmr.TestSitesInFixedWindow.xml  TEST-edu.cornell.med.icb.goby.algorithmic.compression.TestFastArithmeticCoderOrder1.xml  TEST-edu.cornell.med.icb.goby.algorithmic.compression.TestMoveToFrontCoder.xml  TEST-edu.cornell.med.icb.goby.algorithmic.data.CovariateInfoTest.xml  TEST-edu.cornell.med.icb.goby.algorithmic.data.TestDistinctIntValueCounter.xml  TEST-edu.cornell.med.icb.goby.algorithmic.data.TestUnboundedFifoPool.xml  TEST-edu.cornell.med.icb.goby.algorithmic.data.ranges.RangesTest.xml  TEST-edu.cornell.med.icb.goby.alignments.CommonIndelArtifactFilterTest.xml  TEST-edu.cornell.med.icb.goby.alignments.TestAlignmentFilters.xml  TEST-edu.cornell.med.icb.goby.alignments.TestAlignmentIndex.xml  TEST-edu.cornell.med.icb.goby.alignments.TestAlignmentPositionComparator.xml  TEST-edu.cornell.med.icb.goby.alignments.TestAlignmentReader.xml  TEST-edu.cornell.med.icb.goby.alignments.TestBufferedSortingAlignmentWriter.xml  TEST-edu.cornell.med.icb.goby.alignments.TestConcatAlignmentReader.xml  TEST-edu.cornell.med.icb.goby.alignments.TestConcatAlignmentReaderWithPerms.xml  TEST-edu.cornell.med.icb.goby.alignments.TestConcatSortedAlignmentReader.xml  TEST-edu.cornell.med.icb.goby.alignments.TestContigHelper.xml  TEST-edu.cornell.med.icb.goby.alignments.TestCustomContigMapper.xml  TEST-edu.cornell.med.icb.goby.alignments.TestExportableAlignmentEntryData.xml  TEST-edu.cornell.med.icb.goby.alignments.TestIterateSortedAlignment.xml  TEST-edu.cornell.med.icb.goby.alignments.TestIteratedSortedAlignment2.xml  (+80 more)
testsupport/: build.xml  (+2 more)
(+1547 files in other folders)
